--- a/frontend/user.html
+++ b/frontend/user.html
@@ -94,7 +94,7 @@
 <body>
 
   <div class="form-container">
-    <h2>From IT Stocks</h2>
+    <h2>Form IT Stocks</h2>
 
     <div class="form-group">
       <input type="text" id="userName" placeholder="Enter name" />
@@ -108,7 +108,7 @@
 
     <div class="form-group">
         <select id="inkColorUser">
-          <option value="">Select ink type</option>
+          <option value="">Select ink color</option>
         </select>
     </div>
 
