update pisah css

--- a/frontend/kelompok.html
+++ b/frontend/kelompok.html
@@ -3,84 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="kelompok.css">
     <title>Daftar Kelompok</title>
-    <style>
-      html, body{
-        margin: 0;
-        font-family:'Times New Roman', Times, serif;
-        background-color: rgb(233, 99, 99);
-        height: 100%;
-      }
-
-      nav {
-        display: flex;
-        margin: 10px;
-        padding-right: 15px;
-        padding-left: 10px;
-        width: auto;
-        max-width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        color: black;
-        background-color: bisque;
-        border-radius: 10px;
-      }
-
-      .navigate img {
-        width: 40px;
-        height: 40px;
-      }
-
-      .container {
-        max-width: 600px;
-        width: 100%;
-        justify-self: center;
-        align-content: center;
-        margin-top: 50px;
-        margin-bottom: 50px;
-      }
-
-      h1 {
-        text-align: center;
-        margin-bottom: 40px;
-        font-size: 32px;
-      }
-
-      .member {
-        display: flex;
-        align-items: center;
-        margin-bottom: 25px;
-      }
-
-      .member img {
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        object-fit: cover;
-        border: 2px solid #000;
-        margin-right: 15px;
-      }
-
-      .member-info {
-        display: flex;
-        flex-direction: column;
-      }
-
-      .member-info .name {
-        font-weight: bold;
-        font-size: 18px;
-      }
-
-      .member-info .npm {
-        font-size: 14px;
-        color: #555;
-      }
-
-      #copyright {
-        width: 100%;
-        justify-items: center;
-      }
-    </style>
   </head>
   <body>
     <header>
