--- a/frontend/user.html
+++ b/frontend/user.html
@@ -3,96 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Times New Roman', Times, serif;
-      background-color: rgb(233, 99, 99);
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .form-container {
-      width: 400px;
-      margin: 80px auto;
-      padding: 30px;
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 30px;
-      font-weight: 700;
-    }
-
-    .form-group {
-      margin-bottom: 20px;
-    }
-
-    input, select {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      border-bottom: 2px solid #ccc;
-      background: transparent;
-      font-size: 14px;
-      outline: none;
-    }
-
-    input:focus, select:focus {
-      border-color: #e91e63;
-    }
-
-    .form-inline {
-      display: flex;
-      gap: 10px;
-    }
-
-    .form-inline input {
-      flex: 1;
-    }
-
-    .btn-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 10px;
-    }
-
-    button {
-      width: 150px;
-      padding: 12px;
-      background-color: #e91e63;
-      color: white;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #d81b60;
-    }
-
-    #copyright {
-      width: 100%;
-      text-align: center;
-      padding: 20px 0;
-      background-color: white;
-      color: #333;
-      font-size: 14px;
-      margin-top: auto;
-    }
-  </style>
+  <link rel="stylesheet" href="user.css">
+  <title>User Login</title>
 </head>
 <body>
-
   <div class="form-container">
     <h2>Form IT Stocks</h2>
 
