update css dan page gilang

--- a/frontend/update.html
+++ b/frontend/update.html
@@ -10,9 +10,13 @@
     <body>
         <header>
             <nav class="navigate">
-                <img class="lt-menu" src="assets/kelompok2.png" alt="">
+                <a href="update.html">
+                    <img class="lt-menu" src="assets/kelompok2.png" alt="">
+                </a>
                 <ul class="ct-menu">
-                    <il><a href="kelompok.html">Daftar Kelompok</a></li>
+                    <li><a href="cekstok.html">Cek Stok</a></li>
+                    <li><a href="report.html">Report</a></li>
+                    <li><a href="kelompok.html">Daftar Kelompok</a></li>
                 </ul>
             </nav>
         </header>
