--- a/frontend/kelompok.html
+++ b/frontend/kelompok.html
@@ -9,11 +9,12 @@
   <body>
     <header>
       <nav class="navigate">
-        <a href="index.html">
+        <a href="update.html">
           <img class="lt-menu" src="assets/kelompok2.png" alt="">
         </a>
           <ul class="ct-menu">
-              <il><a href="kelompok.html">Daftar Kelompok</a></li>
+              <li><a href="cekstok.html">Cek Stok</a></li>
+              <li><a href="report.html">Report</a></li>
           </ul>
       </nav>
     </header>
