--- a/frontend/user.html
+++ b/frontend/user.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="btn-container">
-      <button onclick="sendwhatsapp();onSubmit();">Submit</button>
+      <button onclick="onSubmit();">Submit</button>
     </div>
   </div>
 
