--- a/frontend/cekstok.html
+++ b/frontend/cekstok.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <link rel="stylesheet" href="cekstok.css">
+        <title>Website Cek Stok</title>
     </head>
 
     <body>
@@ -13,13 +14,7 @@
                     <img class="lt-menu" src="assets/kelompok2.png" alt="">
                 </a>
                 <ul class="ct-menu">
-                    <li>
-                        <a>Ink Type</a>
-                        <ul class="ink-submenu">
-                            <li id="inkoption">Testing</li>
-                            <li id="inkoption">Testing</li>
-                        </ul>
-                    </li>
+                    <li><a href="update.html">Update Stock</a></li>
                     <li><a href="report.html">Report</a></li>
                     <li><a href="kelompok.html">Daftar Kelompok</a></li>
                 </ul>
@@ -31,16 +26,14 @@
                 <h1>Cek Stok</h1>
                 <div class="tabel">
                     <table boder="1" cellpadding="10">
-                        <tr>
-                            <td>Ink Type</td>
-                            <td>Ink color</td>
-                            <td>Quantity</td>
-                        </tr>
-                        <tr>
-                            <td id="inktype-tb"></td>
-                            <td id="inkcolor-tb"></td>
-                            <td id="quantity-tb"></td>
-                        </tr>
+                        <thead>
+                            <tr>
+                            <th>Ink Type</th>
+                            <th>Ink color</th>
+                            <th>Quantity</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tr_table"></tbody>
                     </table>
                 </div>
             </div>    
@@ -50,6 +43,6 @@
                 &copy; 2025. <b>Kelompok 2.</b> All Rights Reserved.
             </div>
         </div>
-        <script src=""></script>
+        <script src="script_cek_stock.js"></script>
     </body>
 </html>
