--- a/frontend/user.html
+++ b/frontend/user.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="user.css">
-  <title>User Login</title>
+  <title>Form Permintaan Tinta</title>
 </head>
 <body>
   <div class="form-container">
