--- a/frontend/report.html
+++ b/frontend/report.html
@@ -25,24 +25,19 @@
                 <h1>Report</h1>
                 <div class="tabel">
                     <table boder="1" cellpadding="10">
+                        
+                    <thead>
                         <tr>
-                            <td>No.</td>
-                            <td>Nama</td>
-                            <td>Divisi</td>
-                            <td>Ink Type</td>
-                            <td>Ink Color</td>
-                            <td>Quantity</td>
-                            <td>Tanggal</td>
+                            <th>No.</th>
+                            <th>Nama</th>
+                            <th>Divisi</th>
+                            <th>Ink Type</th>
+                            <th>Ink Color</th>
+                            <th>Quantity</th>
+                            <th>Tanggal</th>
                         </tr>
-                        <tr>
-                            <td id="no-tb"></td>
-                            <td id="nama-tb"></td>
-                            <td id="divisi-tb"></td>
-                            <td id="inktype-tb"></td>
-                            <td id="inkcolor-tb"></td>
-                            <td id="quantity-tb"></td>
-                            <td id="tanggal-tb"></td>
-                        </tr>
+                    </thead>
+                    <tbody id="tbody"></tbody>
                     </table>
                 </div>
             </div>    
@@ -52,6 +47,6 @@
                 &copy; 2025. <b>Kelompok 2.</b> All Rights Reserved.
             </div>
         </div>
-        <script src=""></script>
+        <script src="script_report.js"></script>
     </body>
 </html>
