update next prev button>

--- a/frontend/cekstok.html
+++ b/frontend/cekstok.html
@@ -36,6 +36,10 @@
                         <tbody id="tr_table"></tbody>
                     </table>
                 </div>
+                <div class="button-np">
+                    <button onClick="updateStock()">Prev</button>
+                    <button onClick="updateStock()">Next</button>
+                </div>
             </div>    
         </div>
         <div id="copyright">
