--- a/frontend/report.html
+++ b/frontend/report.html
@@ -40,6 +40,10 @@
                     <tbody id="tbody"></tbody>
                     </table>
                 </div>
+                <div class="button-np">
+                    <button onClick="updateStock()">Prev</button>
+                    <button onClick="updateStock()">Next</button>
+                </div>
             </div>    
         </div>
         <div id="copyright">
