update next prev icon button

--- a/frontend/report.html
+++ b/frontend/report.html
@@ -41,8 +41,8 @@
                     </table>
                 </div>
                 <div class="button-np">
-                    <button onClick="updateStock()">Prev</button>
-                    <button onClick="updateStock()">Next</button>
+                    <button onClick="updateStock()">◄ Prev</button>
+                    <button onClick="updateStock()">Next ►</button>
                 </div>
             </div>    
         </div>
