Penambahan Dan Perbaikan fitur

--- a/frontend/cekstok.html
+++ b/frontend/cekstok.html
@@ -36,9 +36,9 @@
                         <tbody id="tr_table"></tbody>
                     </table>
                 </div>
-                <div class="button-np">
-                    <button onClick="updateStock()">◄ Prev</button>
-                    <button onClick="updateStock()">Next ►</button>
+                <div class="button-np"> 
+                    <button onclick="prevPage()">Previous</button>
+                    <button onclick="nextPage()">Next</button>  
                 </div>
             </div>    
         </div>
