--- a/frontend/report.html
+++ b/frontend/report.html
@@ -40,9 +40,9 @@
                     <tbody id="tbody"></tbody>
                     </table>
                 </div>
-                <div class="button-np">
-                    <button onClick="updateStock()">◄ Prev</button>
-                    <button onClick="updateStock()">Next ►</button>
+                <div class="button-np"> 
+                    <button onclick="prevPage()">Previous</button>
+                    <button onclick="nextPage()">Next</button>  
                 </div>
             </div>    
         </div>
