--- a/frontend/kelompok.html
+++ b/frontend/kelompok.html
@@ -13,6 +13,7 @@
           <img class="lt-menu" src="assets/kelompok2.png" alt="">
         </a>
           <ul class="ct-menu">
+              <li><a href="update.html">Update</a></li>
               <li><a href="cekstok.html">Cek Stok</a></li>
               <li><a href="report.html">Report</a></li>
           </ul>
