--- a/frontend/report.html
+++ b/frontend/report.html
@@ -14,6 +14,7 @@
         <img class="lt-menu" src="assets/kelompok2.png" alt="Logo Kelompok 2" />
       </a>
       <ul class="ct-menu">
+        <li><a href="update.html">Update</a></li>
         <li><a href="cekstok.html">Cek Stok</a></li>
         <li><a href="kelompok.html">Daftar Kelompok</a></li>
       </ul>
